fixed JWT secret generation, switched to release build

--- a/server.conf
+++ b/server.conf
@@ -2,7 +2,7 @@
 TABBY_ARGS=""
 
 TABBY_ROOT=/var/opt/tabbyml
-WEBSERVER_JWT_TOKEN_SECRET="{{GENERATED_KEY}}"  # randomly generated during install
+TABBY_WEBSERVER_JWT_TOKEN_SECRET="{{GENERATED_KEY}}"
 
 # Any other environmnet variables can be added below
 #TABBY_DISABLE_USAGE_COLLECTION="1"
